src/test/contracts/negative/pattern_match2.jsligo
let test_foo = (x : test_exec_result) : string => {
  match(x) {
    when(Success()): "";
    when(Fail(_)): ""
  };
}
